--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Dataset
+application.vendor=Talyson
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Dataset.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-lang3-3.9.jar=C:\\Users\\Talyson\\Documents\\eclipse-workspace\\Dataset\\lib\\commons-lang3-3.9-bin\\commons-lang3-3.9\\commons-lang3-3.9.jar
 file.reference.opencsv-5.0.jar=C:\\Users\\Talyson\\Documents\\eclipse-workspace\\Dataset\\lib\\opencsv-5.0.jar
@@ -58,7 +60,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=dataset.UI.TelaTabela
+main.class=datasetUI.TelaPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
